# shapely-drugs

./: .gitignore  .gitmodules  .project  .pydevproject  CMakeLists.txt  LICENSE  README.md
Shapely.xcodeproj/: project.pbxproj
Shapely.xcodeproj/xcshareddata/xcschemes/: shapely_tester.xcscheme
data/: ethanol_b3lyp.isaq
data/DUD/: ace.energy  ace_ligands.sdf  ache.energy  ache_ligands.sdf  ada.energy  ada_decoys.sdf  ada_ligands.sdf  alr2.energy  alr2_decoys.sdf  alr2_ligands.sdf  ampc.energy  ampc_decoys.sdf  ampc_ligands.sdf  ar.energy  ar_ligands.sdf  cdk2.energy  cdk2_ligands.sdf  comt.energy  comt_decoys.sdf  comt_ligands.sdf  cox1.energy  cox1_decoys.sdf  cox1_ligands.sdf  cox2.energy  cox2_ligands.sdf  dhfr.energy  dhfr_ligands.sdf  egfr.energy  egfr_ligands.sdf  er_agonist.energy  er_agonist_ligands.sdf  er_antagonist.energy  er_antagonist_ligands.sdf  fgfr1.energy  fgfr1_ligands.sdf  fxa.energy  fxa_ligands.sdf  gart.energy  gart_ligands.sdf  gpb.energy  (+50 more)
data/ESR_DRUGS/: 10_by_10.mat  all_by_all.mat  all_names.txt
data/ESR_DRUGS/ISA_ATOMS/: 1-4-butanediol.atoms  1-4-butanediol.density  1-4-butanediol.fchk  1-4-butanediol.isaq  1-methyl-4-phenyl-4-piperidinol.density  1-methyl-4-phenyl-4-piperidinol.fchk  1-phenethyl-4-phenyl-4-piperidinol.atoms  1-phenethyl-4-phenyl-4-piperidinol.isaq  1-phenyl-2-propanone.density  1P-LSD.atoms  2-Chloromphethamine.density  2-Chloromphethamine.test.10_es.xyz  2-Chloromphethamine.test.6.xyz  2-Chloromphethamine.test.9_es.xyz  2-FluoroMethcathinone.atoms  2-FluoroMethcathinone.density  2-FluoroMethcathinone.fchk  2-FluoroMethcathinone.isaq  2-Fluorodeschloroketamine.atoms  2-Fluorodeschloroketamine.density  2-Fluorodeschloroketamine.isaq  2-Fluroamphethamine.density  25B-NBOH.atoms  (+577 more)
include/Shapely/: FFTProcess.hpp  compressed_bitset.hpp  coordinates.cpp  coordinates.hpp  cubic_spline.hpp  grid.hpp  molecule.cpp  molecule.hpp  serialisation.hpp  utils.hpp
src/: FFTProcess.cpp  coordinates.cpp  cubic_spline.cpp  grid.cpp  molecule.cpp
test/: main_dev.cpp
(+1254 files in other folders)
